cabal-version:       3.0
name:                vodozemac
version:             0.1.0
synopsis:            Haskell bindings for vodozemac
homepage:            https://github.com/ners/vodozemac-haskell
license:             Apache-2.0
license-file:        LICENCE.md
author:              ners
maintainer:          ners@gmx.ch
bug-reports:         https://github.com/ners/vodozemac-haskell/issues
category:            System
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md, Cargo.toml, src/lib.rs

source-repository head
  type:     git
  location: https://github.com/ners/vodozemac-haskell

common common
    default-language: Haskell2010
    ghc-options:
        -Weverything
        -Wno-safe
        -Wno-unsafe
        -Wno-missing-safe-haskell-mode
        -Wno-missing-export-lists
        -Wno-missing-import-lists
        -Wno-missing-kind-signatures
        -Wno-all-missed-specialisations
    default-extensions:
        BlockArguments
        DerivingStrategies
        ForeignFunctionInterface
        ImportQualifiedPost
        NoImplicitPrelude
        ScopedTypeVariables
    build-depends:
        aeson,
        base >= 4 && < 5,
        bytestring,

library
    import:           common
    hs-source-dirs:   src
    exposed-modules:
        Vodozemac.Account
        Vodozemac.Curve25519PublicKey
        Vodozemac.Ed25519PublicKey
        Vodozemac.Ed25519Signature
        Vodozemac.FallbackKey
        Vodozemac.KeyId
        Vodozemac.Olm.Message
        Vodozemac.Olm.Session
        Vodozemac.Raw.Account
        Vodozemac.Raw.Curve25519PublicKey
        Vodozemac.Raw.Ed25519PublicKey
        Vodozemac.Raw.Ed25519Signature
        Vodozemac.Raw.FallbackKey
        Vodozemac.Raw.KeyId
        Vodozemac.Raw.Olm.Message
        Vodozemac.Raw.Olm.Session
    other-modules:
        Vodozemac.Raw.Util
    extra-libraries:  vodozemac_hs

test-suite spec
    import:           common
    ghc-options:      -threaded
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    other-modules:
        VodozemacSpec
    build-depends:
        hspec,
        vodozemac,
